# Drumsthesia

./: .gitignore  .vimspector.json  Arachno SoundFont - Version 1.0.sf2  Cargo.toml  README.md  makefile  test.mid
.github/app/Drumsthesia.app/Contents/: Info.plist
.github/app/Drumsthesia.app/Contents/Resources/: icon.icns
.github/workflows/: rust.yml
flatpak/: io.github.rwtnb.drumsthesia.json  io.github.rwtnb.drumsthesia.metainfo.xml
lib-midi/: Cargo.toml
lib-midi/src/: lib.rs  metronome.rs  midi.rs  playback.rs  track.rs
midi-io/: Cargo.toml
midi-io/src/: lib.rs
neothesia-pipelines/: Cargo.toml
neothesia-pipelines/src/background_animation/: shader.wgsl
neothesia-pipelines/src/quad/: instance_data.rs  mod.rs
neothesia-pipelines/src/waterfall/: horizontal_shader.wgsl  instance_data.rs  mod.rs  shader.wgsl  vertical_shader.wgsl
piano-math/src/: lib.rs  range.rs
scripts/: build.sh
src/: config.rs  drumsthesia.rs  lib.rs  main.rs  target.rs
src/input_manager/: mod.rs
src/output_manager/: midi_backend.rs  mod.rs  synth_backend.rs
src/scene/: mod.rs  scene_manager.rs
src/scene/menu_scene/: neo_btn.rs
src/scene/menu_scene/iced_menu/: mod.rs  theme.rs
src/scene/playing_scene/: drum_roll.rs  marks.rs  midi_mapping.rs  midi_player.rs  mod.rs  notes.rs  toast_manager.rs
src/scene/playing_scene/drum_roll/: lane.rs
src/ui/: mod.rs  text_renderer.rs
src/utils/: resources.rs
web/: index.html
wgpu-jumpstart/: Cargo.toml
wgpu-jumpstart/src/: gpu.rs  lib.rs  shape.rs  transform_uniform.rs
