[package]
name = "drumsthesia"
version = "0.0.1"
authors = ["Rodrigo Watanabe <rodrigo@wtnb.io>"]
edition = "2021"
default-run = "drumsthesia"

[workspace]
members = [
    "lib-midi",
    "wgpu-jumpstart",
    "neothesia-pipelines",
    "midi-io",
]

[features]
default = ["app"]

app = ["rfd", "oxi-synth", "play_along"]

play_along = []

synth = []
fluid-synth = ["synth", "cpal", "fluidlite"]
oxi-synth = ["synth", "cpal", "oxisynth"]

[dependencies]
bytemuck = "1.5"
futures = "0.3"

wgpu-jumpstart = { path = "./wgpu-jumpstart" }
neothesia-pipelines = { path = "./neothesia-pipelines" }
midi-io = { path = "./midi-io" }

winit = { version = "0.28.2" }

wgpu = { version = "0.14"  }
wgpu_glyph = "0.18"


log = "0.4"
env_logger = "0.10"

rfd = { version = "0.10", optional = true }

lib-midi = { path = "./lib-midi" }
midir = "0.9.1"
midly = "0.5.3"

fps_ticker = "1.0"

cpal = { version = "0.14", optional = true }
fluidlite = { version = "0.2", features = ["builtin", "bindgen"], optional = true }
oxisynth = { version = "0.0.3", optional = true }

ron = "0.8"
serde = { version = "1.0", features = ["serde_derive"] }

num = "0.4"
async-thread = "0.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
console_log = "0.2.1"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
]

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[[bin]]
name = "drumsthesia"
required-features = ["app"]

