[package]
name = "drumsthesia"
version = "0.0.1"
authors = ["Rodrigo Watanabe <rodrigo@wtnb.io>"]
edition = "2021"

[build]
target_arch = "wasm32"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[workspace]
members = ["lib-midi", "wgpu-jumpstart", "neothesia-pipelines", "midi-io"]

[features]
default = ["app", "wee_alloc"]

app = ["rfd", "oxi-synth", "play_along"]

play_along = []

synth = []
fluid-synth = ["synth", "cpal", "fluidlite"]
oxi-synth = ["synth", "cpal", "oxisynth"]

[dependencies]
futures = "0.3"

wgpu-jumpstart = { path = "./wgpu-jumpstart" }
neothesia-pipelines = { path = "./neothesia-pipelines" }
midi-io = { path = "./midi-io" }


web-sys = { version = "0.3.61", features = [
  "Window",
  "Document",
  "Request",
  'RequestInit',
  'RequestMode',
  "Response",
  "Blob",
  "console"
] }

wgpu = { version = "0.15.1", features = ["webgl"] }
wgpu_glyph = { branch = "wgpu-0.15", git = "https://github.com/rwtnb/wgpu_glyph.git" }

winit = "0.28.2"

log = "0.4"
env_logger = "0.10"

rfd = { version = "0.10", optional = true }

lib-midi = { path = "./lib-midi" }
midir = "0.9.1"
midly = "0.5.3"

cpal = { version = "0.14", optional = true, features = [ "wasm-bindgen" ] }
wee_alloc = { version = "0.4.2", optional = true }

fluidlite = { version = "0.2", features = [
  "builtin",
  "bindgen",
], optional = true }
oxisynth = { version = "0.0.3", optional = true }

ron = "0.8"
serde = { version = "1.0", features = ["serde_derive"] }

num = "0.4"
async-thread = "0.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
console_log = "0.2.1"
console_error_panic_hook = "0.1.7"
bytemuck = "1.13.1"
js-sys = "0.3.61"
instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }
