[package]
name = "drumsthesia"
version = "0.0.1"
authors = ["Rodrigo Watanabe <rodrigo@wtnb.io>"]
edition = "2021"
default-run = "drumsthesia"

[workspace]
members = [
    "lib-midi",
    "wgpu-jumpstart",
    "neothesia-pipelines",
    "midi-io",
]

[features]
default = ["app"]

app = ["rfd", "oxi-synth", "iced_native", "iced_wgpu", "iced_graphics", "iced_style", "play_along"]

play_along = []

synth = []
oxi-synth = ["synth", "cpal", "oxisynth"]

[dependencies]
bytemuck = "1.5"
futures = "0.3"

wgpu-jumpstart = { path = "./wgpu-jumpstart" }
neothesia-pipelines = { path = "./neothesia-pipelines" }
midi-io = { path = "./midi-io" }

winit = "0.27"

wgpu = "0.14"
wgpu_glyph = "0.18"


log = "0.4"
env_logger = "0.10"

rfd = { version = "0.10", optional = true }

lib-midi = { path = "./lib-midi" }
midir = "0.9.1"
midly = "0.5.3"

fps_ticker = "1.0"

iced_native = { git = "https://github.com/iced-rs/iced.git", rev = "da244ff8048e0b339c1502372894a2460a637241", optional = true }
iced_wgpu = { git = "https://github.com/iced-rs/iced.git", rev = "da244ff8048e0b339c1502372894a2460a637241", features = [
    "png",
    "image",
], optional = true }
iced_graphics = { git = "https://github.com/iced-rs/iced.git", rev = "da244ff8048e0b339c1502372894a2460a637241", optional = true }
iced_style = { git = "https://github.com/iced-rs/iced.git", rev = "da244ff8048e0b339c1502372894a2460a637241", optional = true }

cpal = { version = "0.14", optional = true }
oxisynth = { version = "0.0.3", optional = true }

ron = "0.8"
serde = { version = "1.0", features = ["serde_derive"] }

num = "0.4"
async-thread = "0.1"
cgmath = "0.18.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[[bin]]
name = "drumsthesia"
required-features = ["app"]
